Make the build.sbt file dynamic

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,2 +1,3 @@
-name=Spark sbt template
-description=A template to build Spark applications
+name=spark-sbt-template
+version=0.0.1
+scalaVersion=2.11.8
