Enable the user to manually set the package name when creating their project

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,5 +1,5 @@
-name=spark-sbt-template
-version=0.0.1
+name=my-cool-project
+package=com.github.mrpowers.my.cool.project
 scalaVersion=2.11.8
 sparkVersion=2.1.0
-organization=com.github.mrpowers
+version=0.0.1
